--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@
     
     #logo {
         margin: 0 auto;
-        font-size: 24px;
+        font-size: 22px;
+        text-align: center;
         color: white;
         font-weight: 600;
         text-shadow: 2px 2px 6px #000000;
