--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@
         border: 1px solid #eee;
         padding: 10px;
         flex-basis: 32%;
-        width: 370px;
+        /* width: 370px; */
         height: 426px;
         display: flex;
         flex-direction: column;
@@ -218,6 +218,7 @@
         }
         #logo {
             order: -1;
+            font-size: 25px;
         }
         article {
             order: -1;
